tests/ui/feature-gates/feature-gate-contracts.stderr
error[E0658]: use of unstable library feature `contracts`
  --> $DIR/feature-gate-contracts.rs:3:3
   |
LL | #[core::contracts::requires(x > 0)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `contracts`
  --> $DIR/feature-gate-contracts.rs:7:3
   |
LL | #[core::contracts::ensures(|ret| *ret > 0)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
